modifique pie de index

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     
     </main>
 
-
-    <footer class="piecompra">
+ <footer class="pie">
         <h3>Copyright 2022 Vaproox SAICF - Todos los derechos reservados. Legales Políticas de privacidad</h3>
         <br>
         <img class="log" src="../img/logo.Nombre.jpg" alt="">
